fix no borders + fix dark mode switch

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,10 @@
     scroll-behavior: smooth;
 }
 
+.fa-solid{
+    line-height: 2rem;
+}
+
 @keyframes moon-bounce {
     0%{
         transform: translateY(0);
